--- a/12-motion/style/style.css
+++ b/12-motion/style/style.css
@@ -88,6 +88,7 @@ body {
 
 .document {
   height: 100%;
+  overflow-y: auto;
   background-color: var(--document-bg-color);
   /* Firefox */
   scrollbar-width: 6px;
